#ifndef HWProxyExample_H
#define HWProxyExample_H
struct MotorController;
struct MotorData;
struct MotorDisplay;
struct MotorProxy;
typedef enum DirectionType {
    NO_DIRECTION,
    FORWARD,
    REVERSE
} DirectionType;
#endif